[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/Stage.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Robot/Robot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Robot/CooldownManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=5]
[ext_resource path="res://Assets/Art/Misc/Fundo1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Misc/Fundo3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/UI/EndStageCard.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Music/Shift_Happened.mp3" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "RollCredits"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Credits/Credits:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 14.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 300, 300, -2000 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Credits/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("credits:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 19.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("credits:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15.8, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -15.0, -60.0 ]
}

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Robot" parent="." instance=ExtResource( 2 )]
pause_mode = 1
CooldownManagerPath = NodePath("../CooldownManager")
UIPath = NodePath("../CanvasLayer/UI")
charge_multiplier = 25.0

[node name="CooldownManager" parent="." instance=ExtResource( 4 )]
UIPath = NodePath("../CanvasLayer/UI")

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]
layer = -2

[node name="TextureRect" type="TextureRect" parent="BackgroundCanvas"]
margin_left = 0.735168
margin_top = -94.0677
margin_right = 1024.74
margin_bottom = 505.932
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="BackgroundCanvas"]
modulate = Color( 0, 0, 0, 0.756863 )
margin_top = -98.4189
margin_right = 1024.0
margin_bottom = 501.581
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Credits" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Credits"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Credits/TextureRect"]
modulate = Color( 0, 0, 0, 0.647059 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="CanvasLayer/Credits"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 300.0
margin_right = 1016.0
margin_bottom = 1994.0
custom_fonts/font = ExtResource( 1 )
text = "CREDITS
Anderson Garrote:
Art

Andr√© Bariani:
Sound Design

Dan 'MisterProject' Isamu:
Programming


Thanks for playing!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndStage" parent="CanvasLayer" instance=ExtResource( 8 )]
pause_mode = 2
visible = false

[node name="Timer" type="Timer" parent="."]
pause_mode = 1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RollCredits = SubResource( 1 )

[node name="credits" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
bus = "BGM"

[connection signal="overloaded" from="CooldownManager" to="Robot" method="_on_CooldownManager_overloaded"]
[connection signal="next_pressed" from="CanvasLayer/EndStage" to="." method="_on_EndStage_next_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
